--- a/ansible/inventory/kube/host_vars/k3s-01.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-01.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:3w9WK38/,iv:rA23hoUbtrUWjBWWVBJn2wcKyz0XBvKdPhN7MZ36q1Y=,tag:CCBTI2qUSu9d+mTtNb2TdA==,type:str]
-ansible_user: ENC[AES256_GCM,data:lSzv5xNe,iv:RFWgGQ6mbLYhPOIRT6aIptoh21bMp33dKkMPePYfDqM=,tag:CNixjdZ8zO3ThErIMVvhBQ==,type:str]
+kind: ENC[AES256_GCM,data:JEPeCKH/,iv:ToEFFD3XvwZtYDQycnnpIEZQ3MIOTBiC8G4RTaWcRrA=,tag:3/t6eEBssZQFGb5EjnUYZg==,type:str]
+ansible_user: ENC[AES256_GCM,data:XID9hupG,iv:kNJJzblCyGuKQbZBHJrwziTlJFJJ1OtNIZSS0HDAAQY=,tag:0kOLQtdlifVcdLUJyTToBw==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkeTE5VWFoV05VcGFlZGtE
-            NDJQZm0vNFlHZTVaRUIzNzZnTzlUd2did24wCjgrTjRYem53TVIyRktySFQ0bGNl
-            SWhBdzNMTk9YbEtoUHltYzQreVplTm8KLS0tIERRcnBvRWo2OHAvSERib3BxRU9t
-            dUgyTEdxRDVTZ3hwU2NEMUNjWEFidGMKpRPaXn26NR7Bmw7ZPnpA9IHqTyfdkLt6
-            QcSklUuxcbrkoBX9Jeo2C3602yRF9WSF6q7hcGXxwmT0Bl71C9Qs6g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5UmJEZmhVa1JmZ2hwVmNV
+            SVVFVjA0UHFtRExheUZFc1VsM3UzaE1VMkV3CkFBQTViRzg3NzJ5VHVRQ3VicmMz
+            OFplTWtPZnViSmw0RE5jNkFyNTV3b0kKLS0tIGlvQTYvaWo3T2NDZzRKWmFTcnln
+            MmxkbGJGaWNUMEtHSXNyUFJMMTJDM1kK3Wf1qvwDUrNV2XPPUC7vW2vtJNKlWg3u
+            svCWauNZZfqTlTEeUcULEVSwa2tKFI83qkm3N+h3ePDw4KSRQMSfIQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-08T04:22:55Z"
-    mac: ENC[AES256_GCM,data:PiJui0BxzwWRFAzTL7dTWUQ/IkNiZBUiqXUzkM0o7sGoz0NeGuDQhcSWOa7BU0sX+JVuevfKFjpAZ6umVedOni5GIio0rdO7BWSv9iG4fqsrGXVD7Wrhsfic/yCor4SGFVBEqB8MEhYtEc2IICB1y9gNupnlsRhhqKXMhNf1knU=,iv:yaryhnJ2cGCex2I/SJw3uhfG6uHcf01aBSTK4nnhueI=,tag:tq/96+H4EZuRd1cqbxylkg==,type:str]
+    lastmodified: "2023-02-14T04:19:11Z"
+    mac: ENC[AES256_GCM,data:8Hos0gqyFpne54mkhG7YVwklOYgvQr2B3H+rv7ra8Rf47Rmt8skAIW5AdORsrQvb4eWeVBGyAbghfqb4ttyKKHK0Bj3XkJ9knRYdb6vd7L7ClvBZeUSYll4G2i19Ukeoiaqr+eIsbLUtTeAh4b7O+KxtqfSYt8TG8UtvpWyb2yo=,iv:U2hRfEynXKswyaJK5f/6x8rKDHM2LX25YeG5aKHtV3M=,tag:/N9G+Y5S3g4IXq7EeiHgwA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
