--- a/ansible/inventory/kube/host_vars/k3s-02.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-02.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:3V0s2S1P,iv:waPWdPub9Nx8+AxOqig3UafxDP3LafTn91nJQULUonc=,tag:Mf2gpTooXAHrLfzaz0i/VA==,type:str]
-ansible_user: ENC[AES256_GCM,data:TFou7brW,iv:QWyYkzMKWDfDnvKUq2j0mFWn9zcCSiYQ6RnkDCLhC+Q=,tag:eRSuYOqaBv+ZOEsfvWM+gQ==,type:str]
+kind: ENC[AES256_GCM,data:procVWh4,iv:hrpor5paTuv6IaT5JNvA+HNkpMsx2O78vL9Ax3S/dvM=,tag:LvWm8zx1wAsG97G0uOov4g==,type:str]
+ansible_user: ENC[AES256_GCM,data:KHenwCKb,iv:zvYyKQqDJyB5ku38VmCzGrFBwCQ9YjO2uezdMXAwBbc=,tag:Frz0rIrDjnMMH2gtnO1XRg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvbnVpbGtwRFRHVEpOTVRj
-            S1Bnak1ndG80WUlwcmdEdUZhNDFaWEF4bjJRCm92ZThvanhIeTNTYTl6TjVERVRl
-            NXFJeVNCQWNqUE1MQ1NWVmcyTWprOFUKLS0tIDVqZHlEd0tIajVBTEY1cmJtYk0r
-            enI3eC9EY1ZYNlFld0RHZlhjSmJDc1kK2+3bv6d5fssAoPENo/ha181i3gbHCa9c
-            6+7ZjmmqES0ZBZEclsaG+ACaiOzMbrM2Q0peDBLbxYGpAVURhEwN9w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmeHB3dkhwcTd2WGVPT3Zm
+            eUxqSjIyRzhLeVJ0TkJsUWNMVzhvUUM4dG1zCkE3S1lsS2hjZWJucmhaYm41WjJ4
+            MEZzaWRMc0FZWTUzMjAySEZUc1FydmcKLS0tIFdYeG5TZFBWb0NGTWpaS051dHJS
+            SWNYQ09iK0F1Z05PNnZ2ckJwYSt0cWMKxL2DJbBcm57l4CXlmBrkAz1bmdCzoUKV
+            KUdoI2/7JnCVZiDreRpLbUw19YTgFGMF7bWgRWalPWTBKCGvtz8mog==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-08T04:22:55Z"
-    mac: ENC[AES256_GCM,data:mbpX9VRyjy7Tr6exs7gz3R91LLXOb2rDDbkPla68ytGBEd/DstFLOU7ZrVIzaPzSRbM9IGj3gktvXevxyNmJ/qR/X5q7Yp6/40F0t4zqkdvqYqojprSiD6lABNcc1wh089R7vmVb4/4coxlDxaH3QLVEJj07YkDGABBVBJxXPwk=,iv:O2eE6IbTBibCer50wNTAKCzCDPPfnU0fY62dy5SaY6U=,tag:XGJE8elaynqm/sA1g6iKng==,type:str]
+    lastmodified: "2023-02-14T04:19:11Z"
+    mac: ENC[AES256_GCM,data:3qUYIT722KJmLxnCkQ+9iybJCLUHzF47lV6kdtF0hUESyXZkjfHGr4Sg6WL5aik1gTecrdNnmf+3mK1BtMdEiS4Adop9LMKc4dL0xJAAErWu8WdJcdRTFUbFhkoIMCZ1XfXl/TmKJTkW3aKVAryAiPhnHfcbUV1slo1xcu5q9IQ=,iv:WdD4CAfsBkl4xNODIHZ+j4oKktY2XHJZNL7JwMB9iJ4=,tag:T1SKW4cL6sERTwqF53m6Fg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
