--- a/ansible/inventory/kube/host_vars/k3s-04.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-04.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:zhRne1+k,iv:St2VeEAgO3M51yn/n9Fexdt5V6X7FT70yAtamBY7l4E=,tag:Yu0yvdfM2jaq0VYsCjDIpw==,type:str]
-ansible_user: ENC[AES256_GCM,data:j5PVMsfe,iv:glCp1gtc2cU9dUKq2/RCVcokx4m9h/8cR8NXWdTWHsw=,tag:+ovvczpz5a1Rz1pk/Zclhw==,type:str]
+kind: ENC[AES256_GCM,data:GgAmJ3ps,iv:X9yVUEFRPUz41jYZGxyVBSEk2A4BxU4zEgWE2ebcz2w=,tag:f634wRcZtzmBysy8xhTEow==,type:str]
+ansible_user: ENC[AES256_GCM,data:n4B1pXIO,iv:g+tT6iPU8qV33aHM4iayZ0BI31mwBpaZ55gWAVkAByM=,tag:geJNGChCVZNFQblyTFt9Ig==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBXQTV4ajFoWTJKdmhKVkl4
-            T2IzUHQ3eUcxeS9wU3doY09FS21ZOGZPRjFjCnFGNEE4MnZoZzVPVkFka2RKWFRZ
-            RzQ2RnlDQk5sTnNMdUY0RTBRSkptejgKLS0tIDQzZFN2U2hHVUpVdWRGUGEwTExN
-            eE4zU1EyVTZiRXFvUDVsN1FaUEliYjgK+MeTRPAoOCa2AV+BNFuatnRAr7GUWK+J
-            l2r8x9nQroBXfUqkjCqi/spa2dxLxNGTECnfNFAkniM9S1Fvn0HsRg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB6L2F6cnR2ZmdReUlBRWVr
+            OEVsWUd1MmhhZExTdVJjWDlaU2NNa1pzZTI4ClM4YjVnbWFSclpaL2lqdmVCZWY3
+            eEJJZnlhY0NpWG9yV05RbHZTZGUvVzQKLS0tIDNWeVlJTGJZMlNUemxGUGlCTVlK
+            U0hCVm9VMEZxWnpGUHAyN0o5K1R3UzAKTuRFbtTquvfkKS3SnN0K5ihOhNWlG2bQ
+            aL4aJL7oXhiDPWYdnvFBMLKgJA1tKPasU/EnszZGEZTppoZChYBwxg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-08T04:22:55Z"
-    mac: ENC[AES256_GCM,data:38vW4gMM9m3iGYQl/i4Ihf8OX/0jFXC0Nf1eXNaID6SicyQmZD80WQaIc+sqEA39/pVWI5RbdsJqfMkd/1KqCdqcbWFYrD6LZGazIGafBpAnGp5VkEm1KT2VmT3bDznrT3zCiN0xZ6/u61v34dn7sROoHoDLvyc/kqhGWYkmqAI=,iv:KM9YTHkCECANejzz4gu8Bsu3I0D2Yfo7aJHOPOtWrnw=,tag:qJssijn0Zb+de8TSjvx3mg==,type:str]
+    lastmodified: "2023-02-14T04:19:11Z"
+    mac: ENC[AES256_GCM,data:BsQoKakfMV3C6Q/uEX2lKYadF1nf6UYDVzjRE3CDV4ntOOBWAhJ/HYnms09csXWjVG35YqOL6lpmFR4oeBGsTp6XGksZwXyk6vzM6pUE5J6oORcKTsPgA6LkhtCxdDKiVsdzwAI9IJv6Q66fvxeAedkelr7TqNrbmpBvIv3OfDg=,iv:pF8iJ8aGOvyp5oEhE1JNZTNen7kCOvc9fDfhkRG2WMY=,tag:GyjRCkwkNw61/Te6LVdAlg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
