--- a/ansible/inventory/kube/host_vars/k3s-05.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-05.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:8lE8carl,iv:HVCvORcVTRqLPS2+wO/REHhnAIjowzOpelaia+SYQ+8=,tag:73PvzwPwMVF60TBrDcgwwA==,type:str]
-ansible_user: ENC[AES256_GCM,data:Hkf0ARGP,iv:yFG9hb/kKBgQsWx0hOYJEiP6qk+wwhbCj/4ZGfu/i6k=,tag:Zvf34zuhgfe8g+2zG7zN3w==,type:str]
+kind: ENC[AES256_GCM,data:WuO4Jd7v,iv:rrmQrfNHDyaKPOQIxC0mUtzEE0k0zGGHZdXSkTczqxo=,tag:dYar0fBIDlAfhEHhTK3z7Q==,type:str]
+ansible_user: ENC[AES256_GCM,data:Sdzx+7x/,iv:7a+BODsjAnd5xrU9JQM3W14ICmPG6ykc6q1TgmLn2Tg=,tag:YXc2b3IaDq+UwTelDWAlBg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBPNStCdDhZRG9SaDFjRjRw
-            TUlZaW9Tbm03T0hpeE5IZ3M5NkxNbkliVFQ4CnhFUzkyTmU4ODFqMHdPdXdOSEx0
-            akVBV2I1UXg5QlJXMnRORklsbHlyK2cKLS0tIG1oZmhwUUJUcHFydTFhcHBYeFRj
-            TlVqamIxY3d1aTQ3SEJlZ2dDaTU2R1UKgdpd3/MCPDcNRu2+x05WIqXMAJ4dUuLG
-            aUxpedcxLSuRTBZHPZDp/6jnnbl57Ha1MOx8nR5mZxLQwNHtX7JT8A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2SWlxNFUvR0VrNUE5WjB5
+            RW8wNVBEVDFObzl3RGRqYXY5RFZUTEJPbGpzCkY2dFJHa0tOclQwSkprdmVZc3lu
+            OGhjL3MwNU13a3diWURQdlBRZndPT3cKLS0tIHNqTVA0WjY4bURZK2VvWjdweE9o
+            NXA5OGkwdzBBNm11WS9STFpjcUNVWmcKNE1xRMskLcrkkjZZaoEcW+2JBJmasaNP
+            3nHmnDlp5e9T3khJhAVzNjGQNpAl7o3Ql7MYoq2NO4QsoL+LKOMJBA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-08T04:22:55Z"
-    mac: ENC[AES256_GCM,data:J83akqaENp3cjzpDaKumBixyGd0w452ghmMxpK6rrj+8ptTAnMTJTzXetubJs9CDzQ/vGff4sYHmDdtAk+UCGPiv+mqaazcVitgTGuZ+KIZN2xtsi0tvuHPFBFUlgX+8e72N2eGw/CmjrSSrkCkqPuAALtMnpwzMuEhVu65/XUY=,iv:F6RAFBSkKiGA6Kf/4kh5k1NTvUqPXcbcmEu7TTQShCE=,tag:sAUc1HVZEhevRFU+p2RGKg==,type:str]
+    lastmodified: "2023-02-14T04:19:11Z"
+    mac: ENC[AES256_GCM,data:hCrsUUBtdLLVcvI9PvNCZKgCaHFQaMGhJK6bIS1b5A9ZvLuWF24p43Y3uC4T5brYW3SmXg1SwbiJZVgmaovQIuTd/Ghk7/grzvcCK/pp8lkJJ+SoFW3GgTnhJdI2ervHCHJef/M34HFKCzRHpANcVOiXqqKmC4bLYX17FzigmFs=,iv:1xUe8KRH18ONI8SJoZjWkRZ4WhgM9cN3vK9Cbi671Jk=,tag:D/QtRLX9CZfQyplG4/Kgcg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
