--- a/ansible/inventory/kube/host_vars/k3s-06.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-06.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:mu7x6y5v,iv:SeGYpvbVkcE4vSA0LFTFvV+wO/ks1zxNnUL5N4ggWJg=,tag:pQdYRNpOizRi0QtD9SppmQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:EkdgDxsM,iv:I3UuGiNt174mFN2PCFv9ENqv4XfsWtSFvpbQibimOpM=,tag:K33jUxz0iKfhdkCr0ZsP8g==,type:str]
+kind: ENC[AES256_GCM,data:q2KmQctf,iv:3Ffx8yzzSQKcnWxMYwhM3J6Z97Q47NnU2q2UnAuSipw=,tag:Xc/9bozG5qeBWCBXUzCHMg==,type:str]
+ansible_user: ENC[AES256_GCM,data:haOdPohr,iv:ivEzrpAZ1d3RtiZ3p9IV7pH0vzNvsDtNlNcYK2+41Y4=,tag:u80hHRKhZigaot2XXiNhTg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZUkt5U3VVWExrWFpOOUpu
-            bVNFelByVW4wSktZQWIzUjZVZ1lNMStnRUJnCkRFOHlXMUdPeVJmUVhqNmYrcERl
-            RCswbEQ2MUtUR0hWb0JRbVM0clZaZmsKLS0tIHhrUEdINjJEUmw2SnUvVXFTaHc4
-            SVFoWVU0U3p3bVp4ejdjUU1kbWZ6Z3cKJuuJMxdwZQvpOsd85BeVOqp9exUyBcbb
-            9q+RO4p5SSgXyEwVfcxAKZYkkQbg8L7so3Fn7VbjXDW62zHN/yr5Pw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBNWFBhVnVKd3MrRi8xRFp3
+            WFplSlJVaHVDTGdMY1pVSlRod3JIUGo3YjFFCktvNnBEdkliR3hjWDdtTGRYSEJs
+            RUVETG9LV0hhVkp5a2xrOUJKN3NnY2MKLS0tIGpLSXpDY0lPdXFxMnladk5RSXVm
+            OHg0TmFoblZUaG9ZT2ZtSm1ESUpaelkK8CM7N02VNCJpZ1Pqo/KWQYJTyh95qE5L
+            9blynnkh5smM1aPL3hVeQq1JcRmAwJs3jguLnPcZK8DQrBhfxEn2uQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-08T04:22:55Z"
-    mac: ENC[AES256_GCM,data:mq774hqLU4T0xHvSyOjzO5/m1tR+bcobWtZ5ny6A5C8H4VyQ7+b7IT0n0qnLKvUngZaN69WOiAdwcogZ1xwP0DSDbQoa+YGP+NHPNIacB2csp8xp8EEkJ9iiXsh0f2D7Qz6XLm0reRoNfpsJ871JbSsju64Fw5RwSxZJ/LEG2xA=,iv:2bnJMlmur9g447Xn9dZuZe/R7EbANUuOP7zroaht/3Y=,tag:JTH6QaHZaQ1qT4D3u+DA0Q==,type:str]
+    lastmodified: "2023-02-14T04:19:11Z"
+    mac: ENC[AES256_GCM,data:Lh8t1uXDcaCT4657m08ZXR8DZnxjVAKOHI40vFH12iP1QNWPUJpjtvjhY9A+0XM1aHIXS2r60tlifBjEZ95jK0PJPz+0hpbCGywTrcMbcdvTPIwbxg5npv8xt/hvsH9aceKJ6h/PL8f93zLidtlk3MXLsj6vYgzOU9rwVibIF80=,iv:2ZOg93ZqJR3viAvSiBKTx7AH35EvqzOuPl0PGnsrn84=,tag:oOQOKr1f94kYQ7051e6FoA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
