--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:MRe1PKyz37fSPa8+BwVFMpONm0Af,iv:sL0kv2xGHMzEvlO0iRcCw0mrzedrnNMGaPLT3Y3kvPc=,tag:tvrX/YdaVIR5c1AcecWYpQ==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:mE4kWULIWCH88Usjiafw1Cv+kFGEK99DfMkqpC7a8ilWWmPvdA==,iv:0Z1DhSVCafptOgAgkJMU/GtbAK/kzfG/qZk+pU1ZL2E=,tag:MSjJ6HwpNaORpjVSjbJ0aw==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:J8ild2sd5i116s4=,iv:0tEzyT9Cusr2aRQWOEv10u3EBi2vwla64QBtavK7Da4=,tag:/VU7xMYocXXLr1Djtz7PpA==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:MexbXtUXFaVWirK3/1lc4P/hWxcB,iv:hwga6Hg5hjwdfd4UFR7tLKcG5RXypyjRb12G6xB2V20=,tag:F/WoDehgrMwMwWGBsp1qtg==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:Bm1JFzwfgzV1JlilTzUBKXfnmnCGQv3OeLP6aTCGrf2JTD3xrg==,iv:MafSp+d4ZL8BZbPU+wZ1kXOT0U9JL2NeUuMD6F1HJGs=,tag:CYh9EyjUKtOjkq1qYMwNPA==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:h+hvSV2i1ikDC48=,iv:A+Twg24J4+Rul3q9RyUrpxGZB40pkIOgbgdpzzR5QMo=,tag:Ro8q1V5tbP70mu8avb1ZAQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByRVpTSmNpU0ZBZUNxbEJz
-            cisxc2hBcGd0RG9WTjFCU0tCUmp0NDcva3dBCmlkYUF0eGlWc01VNHRZcDlmc21p
-            ZDQ1Z3h3cW40WmlFUGlPWURYNGNnaHMKLS0tIDBhRnphUHo4Z0RqT1EzQStwa2Nw
-            L3M0Ny83eVd4ODRvbnhSeEQ3aGdLUU0KRXzYHX5zEOxS9If0n87YQeQnZqMxgNrN
-            Q0ZGvdU/XAMbUC9dnpw5MM9zvftaA+UVgUG0KzUtDK0LhVFQlSFjvA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZbW5DZmNZYytZY2gycGZY
+            RjR2bCt1WkZQLy9hWjBPK2gxR2lTMlM0YVM4Cmc5YkpVYUVYOUdrNlpwclZpOGly
+            UnJ1QThiajBKYmI4SVllSWJrN2hUczAKLS0tIG5TYWRvQ3RwQ21XV2M2UDhXb0Y1
+            RmJ3N3dpYVRmS0IrcUZvckhsR1prdjQKGwZGvaVNfHgc8FStD4+/6kD194fGuQbS
+            KpB7EO9QGLYAzGqBQqSfG6qMIIEw/n3X3JG4xDUVdh+pXjNzNYQfMA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-08T04:22:55Z"
-    mac: ENC[AES256_GCM,data:56YMq0r8s1tusDnGsrZUGemrn7jBVsC9zYSlQge0cVQ2Kzh9YLKDN16yA+nX3RLSSUFigCmnR2zL0vmZGYSD5n4nncZArnFAg9h+dTDDnSCW+sgxCMuvDaISBnmOhGVyuG9AWzUNg+2Fd4T4m7JeoBnDcPD5r9kam2I+wsYK7SU=,iv:55qxxMup5h1oKQUThVpDm0aaXp3XvWii4ZqjSYCkTek=,tag:GlOKUuq2luboc6y21Qdr/g==,type:str]
+    lastmodified: "2023-02-14T04:19:11Z"
+    mac: ENC[AES256_GCM,data:pAcXEnR3TnNY4cQElyIyqbDym0XCEltK5D1xcs+Pxy9qmt46wH1tiZyqnLkhr1CpWdbUUIsJ5mKPRUQhm4TWgp/vKp862+b4ZlWQMjZWdoGffXF26ETlyyB9qcWarfwwLy3RbhhlnzyM1l6+fbLQH0IX/ytYD+ADttqxi0ZF1BI=,iv:DavFSP8ROyJIXn/f/cQz8Pf8sHjCu2neYkhd5B98lFY=,tag:ULzCz80ghzuEzKZv/Ygksw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
