--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,27 +4,27 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:rCK3cwVJ5TPzfOI=,iv:laMLaIIRagvG99lM9t7wZv9uTSdffVETq4mAhpe3D14=,tag:V3mxCbL/SVRKlTk8IBmXOw==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:7Cf0cRMvJOiIvubS0uxdWuj9EQce,iv:+/Hhv0qvlBujJRgEeVEZlyaaGWmrT+1tq+/AdOegKUo=,tag:mTr1zLOqigwPaOhmWLsJUQ==,type:str]
-    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:Gj5s3eYDmFbDOzXBOubRrRqkNOOvyGhpyJGPPm0lmpHGDXpuhLCete0XMcvt8BKi/+Dcc5PpvbMfo8fXDkh2KD/PNCi6T2k=,iv:+0QGuKFMgSNOlyaYWyGHdXaMPvEUii1IRrNOo7Rcd00=,tag:Ck9EStYgGU0iEEmkwcXIdQ==,type:str]
-    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:hqZoejuXa/cntqIzmlcbMf15V2xyf9UCisx68xhuo4uSHTs=,iv:crXx+s9Slxbl2iOLDu772xp4tkaELK2yJRGEb5B2n60=,tag:7mAeS7tDuxhMCfkcrZ2xUg==,type:str]
-    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:5DINk5KzBUzwT96d6LqX2x/r9Q==,iv:EFEiUAb2MfYio1Nb5kZpZIB0pSvUtapNUcCnFewSW+0=,tag:qbMgc0Pc1BfEDXKmHDC+hg==,type:str]
-    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:h7hA3Hpx0G2/+sd2AOaWaNmb9xXl,iv:BLyHKKXJga4WlRcDKA0Nlc7sDpXmuUZBoMws+AHyS50=,tag:rOze4ffSRmyRBI59opUDTg==,type:str]
-    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:ZeKESFfRnAo=,iv:hMyt8X1Bba9u/6Hmjh/oTIUjf10sXCQJfLm78uqckh0=,tag:btXUNNqeL+gYVGgLVTNu5w==,type:str]
-    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:WMcww9mBQws=,iv:vGwvnaDztfcrw+KhbbRBZPeJugnwjYa+2OHxDVxAPpk=,tag:Hop37K/K6oDx+jZZ5Kzxjw==,type:str]
-    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:ivAFwh/p6OBaT/2frBJq4hk9G/J/TNx2MvQPnCc5JwL4uXaRv1zhPpbeJoDyEX826EoOOk0LPu2QLZdCVemiKw==,iv:D0SqdY1rmuoscsxOqwpK//VxR3Syg74GZgRthDKSOwo=,tag:A78RMamc3Kq3yHxi8eZvWw==,type:str]
-    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:P8JgR8JWdflNiP9nhgfc8JGqWMmHJ6JpM98lV3gb4I31dLUlKnb2IEeLarKW3QtZDczhBcda0QJ3UOAmiIw0bQ==,iv:ldxu2WErJRv76QDdAPM1iDlDJw8haKUrOFpldNphmVE=,tag:TlaVKBIg+vL3ddQCmRtfTA==,type:str]
-    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:1aSvFU8meGG+,iv:k1KsSnFrDkMAgAumwNwKGAXsWA5I3x0Jsn+Ptt35IrY=,tag:K0CTk6XqMkZv7w6gEuf6Ag==,type:str]
-    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:B8RuRd4foSRmmQYKF9kH,iv:gr10Hk4T8b6kHhYEPPxK7rMPHQrtCPzkVhkbcfA3b0A=,tag:lpsEyYks0GlNcnHVgVODFQ==,type:str]
-    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:UHovd84VKmnqC0tmg0TdMQALwYAu89rhLpcLZdidxeGaSVmD6wI+/FdTsPAbygyvSpU=,iv:HikVcA+zr/vHxz4jSzM/DGAU7mhwVpTF8PVnoPsQyN0=,tag:59aw5f5NwZbpL3ZnppC57A==,type:str]
-    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:SWFHn8L7+82Mg7X2uSM=,iv:BXKenjS0w1U3ojBQ9Ow1kUGjUY/kGOQCG1aqEegChcs=,tag:xWtkpZXljr6AE9vban5+xA==,type:str]
-    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:SKSWdFOuPRG36y4ubNJ6U8h/URA=,iv:kPH08IsUdQFjQ9Ml/coUHXpA47MKAzqo7coZdqIgjE0=,tag:h9OtskHkgtNA50++SLe/jg==,type:str]
-    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:6une1O4Wj1o=,iv:wQqWDg/d7F0S/KVkmvKX2NEG5PpRlofCxbF6WfgJrjg=,tag:wTxBKnZEas3sP5L5cPE4Rg==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:4Ruwi+S/rTPlm5xb,iv:KHMd5grS6H21GX1mfUopJJNF8PNTb+3B0aQKCPkfb/Q=,tag:hzcu35UlcETlvLX6XiVmmw==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:x91bq/Be4Hki,iv:MENWTzuDfD6vxVNu+0UpZdeFqLm+wz14Uto3k3lo1so=,tag:fGYYh4ApO2U6nwPzujThbg==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:ktqV0o7u2zp+,iv:L+009pDftqn5t00RdBHh/8z28PSiReycB9IhAjjXiyw=,tag:Q66D+qf6GJ/6x1Bydnue+A==,type:str]
-    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:TemsbD2uGA==,iv:BLQia1x1/o7T8SRNzuUd+HCnAG2+fb3zwKZgJ/p9bGI=,tag:C/M9P26/+NnHl+YWDGStpw==,type:str]
-    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:Gadmv76y0Xws,iv:TwdY1qBZbw9swLHSSpBRpIgisi8EgpBxBGg1G6AXMjc=,tag:898xWf1CbOZ+5AoZ/FSRrQ==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:4vbiix1tWe+8WYU=,iv:Mi+i915h9b7/9D4FO+i+bV5/x+2f3vzN8W6OJ65D5ww=,tag:nC9YD2CG+JwBu++Me8A+pQ==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:DtIQWg/R4my5PKWoJ+Ai8gQX4CJ+,iv:6qGdRMJ2HHK11KlXqHy1jnz1i0NCvrCZJL1RGf54Lxo=,tag:y1i6r/csNSi6FNIAxCHw7g==,type:str]
+    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:JuOMxLFnFl3Zrv5XVc1adY2nRc0a0S2J1God/8/SI1pGDFpdlFbZoTBE80SK6idRQF0isXK/Kj+0UZeiX8i8z7YkKT2/aS8=,iv:CI+eeKfTVdxM3aOj8Ta8tG2LTTDtASIejbnK+yGprgc=,tag:L1QBU6FTP70wAZGfVkqZzA==,type:str]
+    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:LdFg9qZp69IIAtXOTWCexLVoK6fK/2zFIWp0dPyOFxMpBz4=,iv:fEWz/QsdvYIw7pC/5Bu3iqs9m8V0/+qoGurZKv19+Y0=,tag:j7g8h5mvFmojqwB0FMR+jg==,type:str]
+    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:1pzILK3nFg8/mcJFC6e2+LzxCw==,iv:HSuyRvcMXnZ0nmPS4G9to0sTIJmQXgJeT/VHLURLWyo=,tag:9ocfn9gQaVWlC78Jqpb+bg==,type:str]
+    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:VY6Lwqxy8rItWMdQHfv3+hCqyNFn,iv:JwJzuoP0qngLZULXyh+WDd/H2jIEUHVp8a5JQrjBXmc=,tag:85BkmRlY9tyEKNpCCVUlsg==,type:str]
+    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:FiGo5aUv844=,iv:VNzkV9C0CvYP00dLCSYooVVB6aG7yb7zZD8XWO1AAgw=,tag:UZ5ns+2kutYnxJShK/9YJw==,type:str]
+    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:Zm/eHHichw4=,iv:lFK3q+iNytz/llbPwL9Kf+HIgIaj1bWKAbpEC8Q4G1w=,tag:Nl9vKTF43Gu08We+A/qklg==,type:str]
+    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:0sCriyX4CUPHxZq6pGtkc0p+itzKkzJSiIl2gd44OhVgeNYbCiiM7ZDFb1QGxShdDhvr3vjP4mtZ2YOSL/gmyQ==,iv:mf7098r3L2Q2UTMBaS+Wg81CNx/wkubThu9zHZZyR6U=,tag:oRBzOExqEelFJINnoCGweQ==,type:str]
+    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:sW6XsbtkocplZIqgD2/IfbvB5F1Dcju/FI0OoD7nUYR3T3SS3kgt4jdj+6rDsHQHDnwuzyVRYTT0RsgHJ6VqWg==,iv:yaS1hI4VDpw9qobkv/t90xINqDbdB6vPzZfT10xzWBc=,tag:GlwuqyxbPMacU7xqDjQ+2w==,type:str]
+    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:mbZ/I2AmdFbH,iv:workq3V+cf3eu2E0pE/PTajU8WPBYgqW23CS7vcWxaM=,tag:5pnhLxqxA5oqv1RepKXaHA==,type:str]
+    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:77aIuKmqmmvwDtFxTHWZ,iv:4ULaZeMFm2eUzNbPZu6G2KTdGEiSBprmAU9zbBPGf1M=,tag:a/WujxPzZmfTIton9XnYXg==,type:str]
+    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:hnDgNucqNe7N8VaWhIrsLePwDIhRtqmrPeOQtdGoeq6Qv7g0jQa3eYRNM89/yy9JtcU=,iv:FUZw70zYOFp3FzlQsz8dDdxhaNVhGv+7FQZlBGlul1s=,tag:grOGUtd1Fk+xCVbTZWVy+Q==,type:str]
+    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:YB6XQh1SMa9eokC0UT4=,iv:/ERI9jwVJTT6sCL19hAyhkCa/mODkMwkRdUPCZU5pks=,tag:Nx5YTKUpE4DrzVP/eVMuzw==,type:str]
+    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:n27UUKOD0pFdr5kWLicwfXlTxVc=,iv:3PkpQtV2Yg13+1D0ovoAjUcaqO0kmI+f6knQNrXlmD8=,tag:VWYNuFnIMEVAo+PPi9qfzQ==,type:str]
+    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:feAGwhveD9E=,iv:+pADpF/rUc5J9qI+Xm7779j8Vb12b8iCsOHv0KOCCdQ=,tag:E7zuWZ5Dup32PLdZdFAnbQ==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:gBm3iamoMUh4PtFt,iv:hVvw4eM2Kb6+8IcBl+1IbQguwlpnmh5duOxTmltw7zc=,tag:Fjxbz6WPe5rAk42W82cEQQ==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:xvXp6NQUH1Ot,iv:V4y/znFuHw9x0Fx3f3f3746bBEvj0N56BRiEQiSeW9Q=,tag:NwiE05FG/1ZD3Kb80zkqKg==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:303ra44ZPOGw,iv:6c5tlTyxXjmrh8cXxDM7kh8T2AupvkurwmrM7I2n0H0=,tag:0J0KsJG7yU0TtufnHWDvRw==,type:str]
+    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:62aRXlA+eQ==,iv:zka1bVBTjm1K66KnprICCDf2bXy1FCYcNTHBk+GkbRM=,tag:aqMjs/rZXoTFiy8wKxVUsA==,type:str]
+    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:WKKAygkW2+oc,iv:UGvv8ULT1FMEcGvnDJzKlRWIzWqEPl/NU4frkdGcQQM=,tag:i2tnmJGV22LUKP3Zah221A==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -34,14 +34,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpTWxPUHZrVFlzbUYvQVVW
-            ODBjcTV5Mm5IeW5RTGZjVHcrakVzT3VvMzIwCjJwYjVzQXI1QWwxeTgzNEU1MGYz
-            ZlU5aVdRcVAvck1Bc1M3bXIydkE2Qm8KLS0tIFhxRjFhR3ArVnFSWk5iU2tNaXlx
-            QWMrWE9VNi9COE1kU1o4eVBhZjFYRG8KnvL05KtQyb1hPzoK/09rHRPopd+lJztz
-            d6ZINRDiLbDkzwqQVjrQYtjEjjocSHUmF35C7GZvw/anYsGySOLjpQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4Y245S0UrUVNrV213eXlP
+            WW9PdlFrSERTUWFweERKZUpXejhkR3FDNzNZClJDcGZFNElrZThpdTRVR2pVOElm
+            TkJPOW95L3MyUXJwVWFidmM1VkVTbzgKLS0tIFR2dnhGQk1WRUtaaFZhZVQ4b1Zv
+            R1dGMjBmeCtBMEREcjVlYk5nMFlVbEEK9EeKeA3QbNAqV25eT7P/byNYUW81J+MP
+            HXDS6XfBqEzYaZp0NJf9HIyKiaRhHx56vl5REZOdsdCViGSnUnVkWw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-08T04:22:55Z"
-    mac: ENC[AES256_GCM,data:pS4Zl8BNDULpXOO4baa3z2NSeYe1znoUNUihCTf24r84UNBM0DggbQTnnNR/mQOPmBvfegNU8UqPxM9LRA50SS9r/R8UJBz3P3TEPNAdrUvX2gJ2W8TFEGVGpHIpatIEUHqIXmubdarHpm32HjDdVcvxFcsHvJm9krG61z6I8/8=,iv:mOy7kegZki52hZnFhd3CzT2o0fSTxW7ptMW4JfkJwAo=,tag:BH6rEUItNTYD+Q8LW/YOWg==,type:str]
+    lastmodified: "2023-02-14T04:19:11Z"
+    mac: ENC[AES256_GCM,data:Zad6zxcLf8f72BPXaMhHhtgPeyYLIsa5hBn0i+kxDW1qIXCBEr7F9xbFy5mx1hfD2W6K2FDalcd4ZpjFixOaWqGAqz/AMV68ZY8BrEpOItfEXWohSd85S3g6XAfE42by4++oHQsknIhxLoAU05D0DLxo9IlbMKUN+rrDWmpjiJI=,iv:/8xnEaVucuzvg+unuQIAeDq6f4LnBzALmyLraEe9AiE=,tag:xs8d9FaGHQyMdRPRf/n8Mw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
