--- a/kubernetes/flux/vars/cluster-settings.yaml
+++ b/kubernetes/flux/vars/cluster-settings.yaml
@@ -17,3 +17,4 @@ data:
   PROXMOX_ADDR: "192.168.1.7"
   PLEX_ADDR: "192.168.1.25"
   SVC_PLEX_ADDR: "192.168.1.94"
+  SVC_POSTGRESS_ADDR: "192.168.1.97"
