--- a/ansible/inventory/kube/host_vars/k3s-03.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-03.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:ahYSx279,iv:PHxNCBbF2Ms1JNb9cwO3p/9+ad84+2wz80X6V1p3jVU=,tag:DYipn9YssrwR2ujN7/D/tA==,type:str]
-ansible_user: ENC[AES256_GCM,data:H78JFuy0,iv:rSgEkd0kvUy982DUm+wFNpflnR+xY/A6Tx+QCBAzMp8=,tag:qnQ8Z0IKAZEZJenGOgxzew==,type:str]
+kind: ENC[AES256_GCM,data:Tvu8BmM3,iv:b+a6JPKY6jYYmdO4EyOS+ZDlHFPlSd3HQib8nJ+AsWs=,tag:pHE6OHk1OWoCcdOPr7NxsA==,type:str]
+ansible_user: ENC[AES256_GCM,data:qmQppSq9,iv:EhR+THn7bdclDU5stN0ZbiuAuzdm/hzhBHbdNBTgOLU=,tag:KK3YNSpADkzsnIfpAHqVlg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBPSmpFYVFBcG5oUkNtcEpn
-            ZlNVWmF2dmlQMWRrR2ZyT0lFUUg2S3ovOXdvCkZmMk54SjRkSUorZkQrQ3UwMUVv
-            ZFUxdXVxRWlhdUtJLzNUQmtJZEVwamsKLS0tIDhDeWFId1kzYlhsYVpvbGZVSm9I
-            WlB4QjdPNTVZNmZKN1ppb1NucEFCV2sKD0oxw9h7M5LCkD9JldNcOIzicu84cZsu
-            Z+frdaQL+vY5yye8uXFmnwjF4BUNIYUTpz1qPgfEZYeNMfTWyQ1ryQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB6dzJXTVVBaGVWZTVyUTB1
+            NzBlaEl0NjJNcnJNbUdyUFJ4cmpIUUtub0V3CitFY1BYUHJoYnluU1F2MktnMkds
+            cUJyVnZUV2I2MWZiM29GOWtUdEM0Qm8KLS0tIFJNaUdZTnVxYjJRanBmNTVvSDg4
+            OXlKdi9kOERHcndnMUpLTjArZzQrR1UK74dP57QLgmdLRTQhwhO560cU58//ecOU
+            fhx0Q7T4K61HM/K9VYwapBxKsAxWF1Pn8Ce6dT3PExmDPmfKPQGQoQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-08T04:22:55Z"
-    mac: ENC[AES256_GCM,data:c5b5fLsSJj/U5B4atlXmXKrm6djD0bLRdKZ8nrZsseUJxBEcgvVdNxyg4y8qwWq9Qh2l7ksAqhqW57E/++quIB8LhlPNtLZAQr015J/MnEm7MXCdvrsJOESb3RcJM2cpzS3uwLKuuTHu0KDGuDj6fKkxOW2OL0UtGyQDZ5gUsFk=,iv:u2dwunGl31WHS4nmBgkvKnHeAFkTB+lO+RBEUVxhPnA=,tag:MYczgDbAxDl353txz0eh1A==,type:str]
+    lastmodified: "2023-02-14T04:19:11Z"
+    mac: ENC[AES256_GCM,data:O8rD/WCq1+OafdCqww+q3a90RuMf0ekZe6Xd0d6tolvhZFX+KHvozlodVp3dIRoR5Bf6cx0lKt07iSSDQ81r4CLAUgzwsWbyfIh6kIn1b4KELgbvipIs3JhzErKIyi4vgfOJjQtS0ScpQ6uHG/JR5YNYrYmWyaKCXIVAAq/wzmE=,iv:087jZ3V7j8LuodTxUbS0fRuEpufb7keaLiQ8FHL4n7U=,tag:wt0LACtr5zQaQlRLypex+Q==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
