--- a/tmpl/kubernetes/flux/cluster-settings.yaml
+++ b/tmpl/kubernetes/flux/cluster-settings.yaml
@@ -17,3 +17,4 @@ data:
   PROXMOX_ADDR: "${BOOTSTRAP_PROXMOX_ADDR}"
   PLEX_ADDR: "${BOOTSTRAP_PLEX_ADDR}"
   SVC_PLEX_ADDR: "${BOOTSTRAP_SVC_PLEX_ADDR}"
+  SVC_POSTGRESS_ADDR: "${BOOTSTRAP_POSTGRES_SVC_ADDR}"
