--- a/kubernetes/apps/default/cloudnative-pg/app/service.yaml
+++ b/kubernetes/apps/default/cloudnative-pg/app/service.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   type: LoadBalancer
   externalTrafficPolicy: Local
-  loadBalancerIP: "${SVC_POSTGRESQL_ADDR}"
+  loadBalancerIP: "${SVC_POSTGRESS_ADDR}"
   ports:
     - name: postgres
       port: 5432
