--- a/kubernetes/apps/default/cloudnative-pg/cluster/cluster.yaml
+++ b/kubernetes/apps/default/cloudnative-pg/cluster/cluster.yaml
@@ -16,12 +16,12 @@ spec:
     name: cloudnative-pg
   monitoring:
     enablePodMonitor: false
-  # bootstrap:
-  #   initdb:
-  #     database: app
-  #     owner: ${SECRET_POSTGRES_USERNAME}
-  #     secret:
-  #       name: cloudnative-pg
+  bootstrap:
+    initdb:
+      database: app
+      owner: ${SECRET_POSTGRES_USERNAME}
+      secret:
+        name: cloudnative-pg
 
 
 # ---
