--- a/kubernetes/apps/default/cloudnative-pg/app/postgres.sops.yaml
+++ b/kubernetes/apps/default/cloudnative-pg/app/postgres.sops.yaml
@@ -5,7 +5,7 @@ metadata:
     name: cloudnative-pg
     namespace: default
 stringData:
-    username: ENC[AES256_GCM,data:J4OK6Pympw==,iv:hVOr9CkvElCQgcFQpfLtjWcBlzcNrOshVu7iTYUnyDs=,tag:QOC9BAQBW1wFhp38oIASqQ==,type:str]
+    username: ENC[AES256_GCM,data:3+Mnyqw13NM=,iv:HQAdf+mgF5xoTRe+Amk6V5M6/0niFGxwr7txj8hxd9Q=,tag:1W9ERwoxQL77eYbQPj89mQ==,type:str]
     password: ENC[AES256_GCM,data:J6Gsk/kxBpY1,iv:9x9fVPQLKFYLnJmDUMCEuoko9hB2ZSTaZCOHDOii3LM=,tag:kKS4xILwg639T9XgURjoXA==,type:str]
 sops:
     kms: []
@@ -22,8 +22,8 @@ sops:
             dFNxK0JPWVUyOVJqaUY3UlZtUE9LYUUKkl1NNdTJjo1zWXLIy9zm+eVkfKftLFxp
             CZWtmiPU2zgBux2erqyJI6FuEHm4WjEd9mh2oF2pm4wmbUgqpSGi5g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-12T18:43:40Z"
-    mac: ENC[AES256_GCM,data:o3ygZA9TDt/QhLa+TfgEBBhd70BITybi8bf6/hbVJufWsOwwDyL4Gae08jK3Jmcp2hfBkuMHHYiEVZrXST1zdeZ/Gg5pvFtI8sSSDplwIHIos7AaKrlJ+EzauDwyX+yPCh7Eh6efXp45k+oqCZ+uQXRb/YsvajBCN2927pE3DO8=,iv:fjPOuBU7+Kr92Z3v0ezneIYpxIe7c03ym9CuQWawOBg=,tag:FzRD4RQ13XPuvsC6gcNFSA==,type:str]
+    lastmodified: "2023-02-15T05:25:28Z"
+    mac: ENC[AES256_GCM,data:847NWtsYaP1lmbpjwoZYWppohvn1ymM+zSEMwmraNSKJj4umltSuszOkU4ylg0/qGbyHEdS+F9xrG9rGAPkRQdhiWSH4OiiJd9uvgHbY+jSRdhZ8v/W/ohRM5ersBAIyKodIHRVCeSNLo1w9QnTIAkZvUZBFDlYxEU2vuMz4qug=,iv:QHgELrNoInu8TnaSSsKpoP1zBrpIBYJWX4N/qfmy08g=,tag:2H4dTWHnOs53n0AiZgNDZQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
