--- a/kubernetes/apps/default/pgadmin/app/helm-release.yaml
+++ b/kubernetes/apps/default/pgadmin/app/helm-release.yaml
@@ -39,7 +39,7 @@ spec:
           Name: postgres
           Group: Servers
           Port: 5432
-          Username: ${SECRET_POSTGRES_USERNAME}
+          Username: postgres
           Host: postgres-any.default.svc.cluster.local
           SSLMode: prefer
           MaintenanceDB: app
