--- a/kubernetes/apps/default/cloudnative-pg/app/kustomization.yaml
+++ b/kubernetes/apps/default/cloudnative-pg/app/kustomization.yaml
@@ -11,7 +11,7 @@ configMapGenerator:
       - cloudnative-pg-dashboard.json=https://raw.githubusercontent.com/cloudnative-pg/cloudnative-pg/main/docs/src/samples/monitoring/grafana-dashboard.json
 generatorOptions:
   disableNameSuffixHash: true
-  annotations:
-    kustomize.toolkit.fluxcd.io/substitute: disabled
+  # annotations:
+  #   kustomize.toolkit.fluxcd.io/substitute: disabled
   labels:
     grafana_dashboard: "true"
