--- a/kubernetes/apps/default/cloudnative-pg/app/kustomization.yaml
+++ b/kubernetes/apps/default/cloudnative-pg/app/kustomization.yaml
@@ -4,14 +4,13 @@ kind: Kustomization
 namespace: default
 resources:
   - ./helmrelease.yaml
-  - ./service.yaml
 configMapGenerator:
   - name: cloudnative-pg-dashboard
     files:
       - cloudnative-pg-dashboard.json=https://raw.githubusercontent.com/cloudnative-pg/cloudnative-pg/main/docs/src/samples/monitoring/grafana-dashboard.json
 generatorOptions:
   disableNameSuffixHash: true
-  # annotations:
-  #   kustomize.toolkit.fluxcd.io/substitute: disabled
+  annotations:
+    kustomize.toolkit.fluxcd.io/substitute: disabled
   labels:
     grafana_dashboard: "true"
